# Version 0.7.0 (unreleased)
- [#892] Show tooltip for piece node point.
- [#894] Quick way to disable a passmark.
- [#895] Improve path validation. Do not allow repeat the same curve twice.
- Improve UI. Make placeholder menu scrollable.
- [#651] Improve feature: Layout orientation according to grainline.

# Version 0.6.2 (unreleased)
- [#903] Bug in tool Cut Spline path.
- [#905] Valentina crashes with error: This id is not unique.
- [#909] Valentina produces wrong united path.
- [#912] Labels in inactive state return to initial color.
- [#913] Unable to save changes for piece path if it doesn't contain a point.
- [#914] Filtering custom seam allowance paths prevent including more than one.
- [#915] Valentina produces wrong seam allowance for acute angle.

# Version 0.6.1 October 23, 2018
- [#885] Regression. Broken support for multi size measurements.
- Fixed issues with seam allowance.
- [#890] Menu Windows->Close pattern doesn't clear "Group of visibility" list.
- [#891] Valentina claims that file was incorrectly saved when used Save as option.

# Version 0.6.0 October 1, 2018
- [#682] New feature. Export increments to Excel .csv.
- [#681] Enhance feature: Dashed line options for curves, arcs, etc.
- [#684] Proposal: Add option to only show outer edges on detail.
- [#244] New feature: Adjust line and point thickness and label size.
- [#637] Max scene size too small to fit all objects.
- New feature Zoom Fit Best Current pattern piece.
- [#693] New feature: Sort workpiece "Groups" by name.
- [#712] Default seam allowance setting.
- [#630] Improve export: upgrade to DXF r14 format.
- [#669] Improve export: export labels as text in DXF.
- [#716] Command line option to create *tiled* export.
- [#660] New export: Export details without layout.
- [#734] Optimization. Stop increments/variables table from updating immediately.
- [#750] Info Box Beside Mouse.
- [#634] New feature: Fabric manager.