@@ -161,6 +161,8 @@ The path to output destination folder. By default the directory at which the app
 .RS
 .BR "*" " Roll 72in = 14."
 .RE
+.IP "--landscapeOrientation"
+.RB "Switch page template orientation to landscape (" "export mode" "). This option has effect only for one of predefined page templates."
 .IP "-W, --pagew <The page width>"
 .RB "Page width in current units like 12.0 (cannot be used with \*(lqpageformat\*(rq, " "export mode" ")."
 .IP "-H, --pageh <The page height>"
