@@ -4,6 +4,7 @@
 - [#895] Improve path validation. Do not allow repeat the same curve twice.
 - Improve UI. Make placeholder menu scrollable.
 - [#651] Improve feature: Layout orientation according to grainline.
+- New command line option --landscapeOrientation.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
